--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 body {
     width: 380px;
     height: 80px;
+    position: relative;
 }
 
 .title {
     font-size: 10px;
     color: #afafaf;
     font-weight: bold;
+}
+
+#inputContaienr {
+    margin-top: 24px;
 }
 
 #countTarget {
@@ -22,6 +27,8 @@ body {
     padding: 2px 6px;
     background-color: #dddddd;
     border-radius: 3px;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 2px 5px 1px rgb(64 60 67 / 12%);
 }
 
 .controllers_btn:hover {
@@ -29,10 +36,18 @@ body {
     cursor: pointer;
 }
 
-.controllers_btn:first-of-type {
+#saveBtn.controllers_btn {
     margin-right: 16px;
 }
 
 #resultWord {
     overflow-wrap: anywhere;
+}
+
+#closeBtn {
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    margin: 0;
 }
